# fullstack-next-fastapi

backend/app/: main.py  mypy.ini  pyproject.toml  ruff.toml
backend/app/api/v1/users/: users.py
backend/app/app/controllers/: auth.py  user.py
backend/app/app/models/: __init__.py  task.py  user.py
backend/app/app/repositories/: user.py
backend/app/app/schemas/extras/: current_user.py
backend/app/app/schemas/requests/: tasks.py  users.py
backend/app/app/schemas/responses/: users.py
backend/app/core/: config.py  server.py
backend/app/core/cache/: cache_manager.py  custom_key_maker.py
backend/app/core/controller/: base.py
backend/app/core/db/: session.py  transactional.py
backend/app/core/factory/: factory.py
backend/app/core/fastapi/dependencies/: authentication.py  permissions.py
backend/app/core/fastapi/middlewares/: auth-archive.py  authentication.py  response_logger.py  sqlalchemy.py
backend/app/core/repository/: base.py
backend/app/core/security/: access_control.py  jwt.py
backend/app/core/utils/: __init__.py  datetime.py
backend/app/migrations/: env.py
frontend/: .eslintrc.js  .prettierrc.js  .stylelintignore  .stylelintrc.js  components.json  package.json  pnpm-lock.yaml
frontend/src/components/ui/: button.tsx  icons.tsx  input.tsx  label.tsx
frontend/src/pages/auth/login/: index.tsx  user-auth-form.tsx
frontend/src/styles/: globals.css
